--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 ---
 language: python
 python:
-  - "2.7"
   - "3.3"
   - "3.4"
   - "3.5"
   - "nightly"
+
+matrix:
+  exclude:
+    - python: 3.1
 
 script:
   - python setup.py develop
