--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ python:
   - "3.5"
   - "nightly"
 
+install: "pip install -r requirements.txt"
+
 script:
   - python setup.py develop
   - stump/tests/test_stump.py
+  - pep8 stump/stump.py
